add code to package function